--- a/pyvenv.cfg
+++ b/pyvenv.cfg
@@ -1,5 +1,3 @@
-home = /usr/bin
+home = /Library/Developer/CommandLineTools/usr/bin
 include-system-site-packages = false
-version = 3.13.11
-executable = /usr/bin/python3.13
-command = /usr/bin/python3 -m venv /home/jcrayb/Documents/GitHub/lit-review
+version = 3.9.6
